add RWD for content component

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,11 +5,8 @@
     bottom: 0;
     box-sizing: border-box;
     width: 100%;
-    height: auto;
-    background-color: rgba(211, 214, 215, 0.684);
-    opacity: 1;
-    // position: absolute;
-    bottom: 0;
+    height: fit-content;
+    background: rgba(255, 255, 255, 0.1);
 }
 
 .copyright{
