--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -7,7 +7,7 @@
                 <div id="searchBox1_R1" class="searchBox1_R1">
                     <div id="sb1Box1" class="sb1Box1">
                         <label id="label1" class="label1">From:</label>
-                        <input #flyFromValue class="input1" placeholder="Available options: Warsaw" type="text" [(ngModel)]="input1Value" value="{{input1Value}}" (keyup)="getInput1(input1Value)" >
+                        <input #flyFromValue class="input1" placeholder="Warsaw" type="text" [(ngModel)]="input1Value" value="{{input1Value}}" (keyup)="getInput1(input1Value)" >
                         <div [ngClass]="{'flyFromValAutocomplete': this.autocompleteStatus1 == 1, 'hideItem': this.autocompleteStatus1 == 0}">
                             <option (click)="autocomplete1_confirm(option)" [value]="option" *ngFor="let option of flyFromValFilter;let i=index;">{{option}}</option>
                         </div>
@@ -26,7 +26,7 @@
                 <div id="searchBox1_R2" class="searchBox1_R2">
                     <div id="sb1Box4" class="sb1Box4">
                         <label id="label4" class="label4">To:</label>
-                        <input #flyToValue class="input4" placeholder="Available options: London, New York, Pariscd" type="text" [(ngModel)]="input2Value" value="{{input2Value}}" (keyup)="getInput2(input2Value)">
+                        <input #flyToValue class="input4" placeholder="London, New York, Paris" type="text" [(ngModel)]="input2Value" value="{{input2Value}}" (keyup)="getInput2(input2Value)">
                         <div [ngClass]="{'flyToValAutocomplete': this.autocompleteStatus2 == 1, 'hideItem' : this.autocompleteStatus2 == 0}">
                             <option (click)="autocomplete2_confirm(option)" [value]="option" *ngFor="let option of flyToValFilter;let i=index;">{{option}}</option>
                             <!-- <option (click)="autocomplete2_confirm(option)" [value]="option *ngFor="let option of flyToValFilter;let i=index;">{{option}}</option> -->
