--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -11,15 +11,11 @@ $font-family_2:  Cursive, Helvetica, sans-serif;
     display: none;
 }
 
-
-
 body{
     height: fit-content;
-    // height: 500px;
     width: auto;
-    // margin: 0% 15% 0% 15%;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
 }
 
 #header1{
@@ -41,10 +37,9 @@ body{
 
     .searchPanel{
         margin: 50px auto 320px auto ;
-        width: fit-content;
         display: flex;
         flex-direction: column;
-        width: max-content;
+        width: fit-content;
         height: fit-content;
         opacity: 0.9;
         .searchTitle{
@@ -65,7 +60,10 @@ body{
             font-family: $font-family_2;
             font-size: 18px;
             border-radius: 0px 15px 15px 15px;
-
+        }
+        .searchBox:hover{
+            transition: 0.5s;
+            opacity: 1;
         }
             .searchBox1{
                 display: flex;
@@ -79,7 +77,7 @@ body{
                     flex-direction: row;
                     .sb1Box1{
                         padding: 20px 10px 10px 10px;
-                        width: 400px;
+                        width: fit-content;
                         height: fit-content;
                         display: flex;
                         flex-direction: column;
@@ -92,7 +90,7 @@ body{
                             height: 40px;
                             font-size: 20px;
                             z-index: 1;
-                            padding-top: 5px;
+                            padding-top: 3px;
                         }
 
                         .flyFromValAutocomplete{
@@ -149,7 +147,7 @@ body{
                     // z-index: 1;
                     .sb1Box4{
                         padding: 0px 10px 10px 10px;
-                        width: 400px;
+                        width: fit-content;
                         height: fit-content;
                         display: flex;
                         flex-direction: column;
@@ -162,6 +160,7 @@ body{
                             height: 40px;
                             font-size: 20px;
                             z-index: 1;
+                            padding-top: 3px;
                         }
                         .flyToValAutocomplete{
                             border: 1px solid rgb(79, 78, 78);
@@ -211,8 +210,7 @@ body{
                 }
             }
             .searchBox2{
-                min-width: 20%;
-                max-width: fit-content;
+                width: fit-content;
                 height: 320px;
                 display: flex;
                 align-items: center;
@@ -220,12 +218,14 @@ body{
                 // background-color: #932c2c;
                 .searchButton{
                     all :unset;
-                    width: auto;
-                    margin: auto 60px auto 60px;
+                    text-align: center;
+                    width: 150px;
+                    height: 50px;
+                    margin: auto 15px auto 15px;
                     cursor: pointer;
                     background-color: #fe9400;
                     color: rgb(0, 0, 0);
-                    padding: 15px 90px;
+                    // padding: 15px 40px;
                     font-size: 20px;
                     transition: 0.5s;
                     border-radius: 15px 15px 15px 15px;
@@ -233,10 +233,106 @@ body{
                 .searchButton:hover{
                     background-color: rgb(74, 143, 143);
                     transform: scale(1.05);
+                    transition: 0.5s;
                     // -webkit-transform: scale(1.05);
                 }
-
-
             }
             
+    }
+
+    @media screen and (max-width: 767px){
+
+        #header1{
+            font-size: 40px;
+            }
+
+        .searchPanel{
+            margin: 20px auto 20px auto ;
+            width: fit-content;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: fit-content;
+            .searchTitle{
+                width: fit-content;
+            }
+            .searchBox{
+                width: 100%;
+                height: fit-content;
+                display: flex;
+                flex-direction: column;
+                border-radius: 0px 15px 15px 15px;
+            }
+
+                .searchBox1{
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    height: fit-content;
+                    .searchBox1_R1{
+                        width: 100%;
+                        height: fit-content;
+                        display: flex;
+                        flex-direction: column;
+                        .sb1Box1{
+                            width: 100%;
+                            height: fit-content;
+                            display: flex;
+                            flex-direction: column;
+                        }
+                        .sb1Box2{
+                            width: 100%;
+                            height: fit-content;
+                            display: flex;
+                            flex-direction: column;
+                        }
+                        .sb1Box3{
+                            width: 100%;
+                            height: fit-content;
+                            display: flex;
+                            flex-direction: column;
+                        }
+                    }
+
+                    .searchBox1_R2{
+                        width: 100%;
+                        height: fit-content;
+                        display: flex;
+                        flex-direction: column;
+                        .sb1Box4{
+                            width: 100%;
+                            height: fit-content;
+                            display: flex;
+                            flex-direction: column;
+                        }
+                        .sb1Box5{
+                            width: 100%;
+                            height: fit-content;
+                            display: flex;
+                            flex-direction: column;
+                        }
+                        .sb1Box6{
+                            width: 100%;
+                            height: fit-content;
+                            display: flex;
+                            flex-direction: column;
+                        }
+                    }
+                }
+                .searchBox2{
+                    width: 100%;
+                    padding: 10px 10px 10px 10px;
+                    height: fit-content;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .searchButton{
+                        margin: auto;
+                        padding: 15px 60px;
+                    }
+                }
+        }
+
+
+
     }
