--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <header>
     <div id="headerContent" class="headerContent">
-        <div id="logo" class="logo">
+        <!-- <div id="logo" class="logo">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 16 16" enable-background="new 0 0 16 16">
             <path d="M0,9l4,1.5L6,16l2.861-3.82L14,14l2-14L0,9z M7.169,11.44l-0.916,2.485l-1.086-3.118l8.402-7.631L7.169,11.44z"/>
             </svg>
-        </div>
+        </div> -->
     
         <div id="topMenu" class="topMenu">
             <div id="home" class="topMenuItem"><a class="topMenuItem" routerLink="content" routerLinkActive="topMenuItem_active">Home</a></div>
