--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -135,7 +135,8 @@ flex-direction: column;
             .widget1Box_R2_C1{
                 background-color: #74bf80;
                 width: 100%;
-                height: 22.5%;
+                // height: 22.5%;
+                height: fit-content;
                 border-radius: 0px 15px 0px 0px;
                 display: flex;
                 flex-direction: row;
