search results layout building

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,17 @@
 
 
   <!-- <app-content></app-content> -->
-  <!-- <app-search-results></app-search-results>
-  <app-weather></app-weather> -->
+  <router-outlet></router-outlet>
+  <app-search-results></app-search-results>
+
+
+  <!-- <app-weather></app-weather> -->
 
 <!-- <app-weather></app-weather> -->
   <!-- navigation -->
 
   
-  <router-outlet></router-outlet>
+
 <app-footer></app-footer>
 </body>
 
