--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -245,16 +245,16 @@ body{
         @media screen and (max-width: 992px){
 
         #header1{
-            margin: 50px 15% 50px 15%;
+            margin: 40px 0px 40px 0px;
             font-size: 30px;
             }
 
         .searchPanel{
-            margin: 10px auto 20px auto ;
-            width: fit-content;
+            margin: 0px auto 50px auto ;
+            width: 100%;
+            // width: fit-content;
             display: flex;
             flex-direction: column;
-            width: 100%;
             height: fit-content;
             .searchTitle{
                 width: fit-content;
@@ -274,14 +274,15 @@ body{
                     height: fit-content;
                     .searchBox1_R1{
                         width: 100%;
-                        height: fit-content;
                         display: flex;
                         flex-direction: column;
                         .sb1Box1{
                             width: 100%;
-                            height: fit-content;
                             display: flex;
                             flex-direction: column;
+                            .input1{
+                                width: 100%;
+                            }
                         }
                         .sb1Box2{
                             width: 100%;
@@ -307,6 +308,9 @@ body{
                             height: fit-content;
                             display: flex;
                             flex-direction: column;
+                            .input4{
+                                width: 100%;
+                            }
                         }
                         .sb1Box5{
                             width: 100%;
