Send data from formular to fetch API data flyData

--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -20,6 +20,7 @@
                 <div class="distance">distance</div>
                 <div class="duration">duratuion</div>
                 <div class="provider">Provider: </div>
+                <div class="detailsButDiv"><button class="detailsButton">Show more details</button></div>
             </div>
             <div class="itemBoxC3">itemBoxC3</div>
         </div>
