fetch flight data and send them between comp.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
   <!-- <app-content></app-content> -->
   <router-outlet></router-outlet>
-<!--   <app-search-results></app-search-results> -->
+  <app-search-results></app-search-results>
 
 
   <!-- <app-weather></app-weather> -->
