fix function in *ngFor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 
   <!-- <app-content></app-content> -->
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
   <app-search-results></app-search-results>
 
 
