Add seats reservation model

--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -55,9 +55,274 @@
                     <div class="detailsButDiv"><button  class="detailsButton">Show more details</button></div>
                 </div>
                 <div class ="itemBoxC3">
-                    itemBoxC2
 
-                    
+                    <div class="seatsReservation">Chose you seat:
+
+                        <div class="plane">
+                            <div class="seats">
+    
+                                <!-- Row A -->
+                                <div class="planeR1">
+                                    <div class="labelLetter">A</div>
+                                    <button class="seatFree">1</button>
+                                    <button class="seatFree">2</button>
+                                    <button class="seatFree">3</button>
+                                    <button class="seatFree">4</button>
+                                    <button class="seatFree">5</button>
+                                    <button class="seatFree">6</button>
+                                    <button class="seatFree">7</button>
+                                    <button class="seatFree">8</button>
+                                    <button class="seatFree">9</button>
+                                    <button class="seatFree">10</button>
+                                    <button class="seatFree">11</button>
+                                    <button class="seatFree">12</button>
+                                    <button class="seatFree">13</button>
+                                    <button class="seatFree">14</button>
+                                    <button class="seatFree">15</button>
+                                    <button class="seatFree">16</button>
+                                    <button class="seatFree">17</button>
+                                    <button class="seatFree">18</button>
+                                    <button class="seatFree">19</button>
+                                    <button class="seatFree">20</button>
+                                    <button class="seatFree">21</button>
+                                    <button class="seatFree">22</button>
+                                    <button class="seatFree">23</button>
+                                    <button class="seatFree">24</button>
+                                    <button class="seatFree">25</button>
+                                    <button class="seatFree">26</button>
+                                    <button class="seatFree">27</button>
+                                    <button class="seatFree">28</button>
+                                    <button class="seatFree">29</button>
+                                    <button class="seatFree">30</button>
+                                    <button class="seatFree">31</button>
+                                    <button class="seatFree">32</button>
+                                    <button class="seatFree">33</button>
+                                    <button class="seatFree">34</button>
+                                    <button class="seatFree">35</button>
+                                    <button class="seatFree">36</button>
+                                    <button class="seatFree">37</button>
+                                    <button class="seatFree">38</button>
+                                </div>
+    
+                                <!-- Row B -->
+                                <div class="planeR2">
+                                    <div class="labelLetter">B</div>
+                                    <button class="seatFree">1</button>
+                                    <button class="seatFree">2</button>
+                                    <button class="seatFree">3</button>
+                                    <button class="seatFree">4</button>
+                                    <button class="seatFree">5</button>
+                                    <button class="seatFree">6</button>
+                                    <button class="seatFree">7</button>
+                                    <button class="seatFree">8</button>
+                                    <button class="seatFree">9</button>
+                                    <button class="seatFree">10</button>
+                                    <button class="seatFree">11</button>
+                                    <button class="seatFree">12</button>
+                                    <button class="seatFree">13</button>
+                                    <button class="seatFree">14</button>
+                                    <button class="seatFree">15</button>
+                                    <button class="seatFree">16</button>
+                                    <button class="seatFree">17</button>
+                                    <button class="seatFree">18</button>
+                                    <button class="seatFree">19</button>
+                                    <button class="seatFree">20</button>
+                                    <button class="seatFree">21</button>
+                                    <button class="seatFree">22</button>
+                                    <button class="seatFree">23</button>
+                                    <button class="seatFree">24</button>
+                                    <button class="seatFree">25</button>
+                                    <button class="seatFree">26</button>
+                                    <button class="seatFree">27</button>
+                                    <button class="seatFree">28</button>
+                                    <button class="seatFree">29</button>
+                                    <button class="seatFree">30</button>
+                                    <button class="seatFree">31</button>
+                                    <button class="seatFree">32</button>
+                                    <button class="seatFree">33</button>
+                                    <button class="seatFree">34</button>
+                                    <button class="seatFree">35</button>
+                                    <button class="seatFree">36</button>
+                                    <button class="seatFree">37</button>
+                                    <button class="seatFree">38</button>
+                                </div>
+                                <!-- Row C -->
+                                <div class="planeR3">
+                                    <div class="labelLetter">C</div>
+                                    <button class="seatFree">1</button>
+                                    <button class="seatFree">2</button>
+                                    <button class="seatFree">3</button>
+                                    <button class="seatFree">4</button>
+                                    <button class="seatFree">5</button>
+                                    <button class="seatFree">6</button>
+                                    <button class="seatFree">7</button>
+                                    <button class="seatFree">8</button>
+                                    <button class="seatFree">9</button>
+                                    <button class="seatFree">10</button>
+                                    <button class="seatFree">11</button>
+                                    <button class="seatFree">12</button>
+                                    <button class="seatFree">13</button>
+                                    <button class="seatFree">14</button>
+                                    <button class="seatFree">15</button>
+                                    <button class="seatFree">16</button>
+                                    <button class="seatFree">17</button>
+                                    <button class="seatFree">18</button>
+                                    <button class="seatFree">19</button>
+                                    <button class="seatFree">20</button>
+                                    <button class="seatFree">21</button>
+                                    <button class="seatFree">22</button>
+                                    <button class="seatFree">23</button>
+                                    <button class="seatFree">24</button>
+                                    <button class="seatFree">25</button>
+                                    <button class="seatFree">26</button>
+                                    <button class="seatFree">27</button>
+                                    <button class="seatFree">28</button>
+                                    <button class="seatFree">29</button>
+                                    <button class="seatFree">30</button>
+                                    <button class="seatFree">31</button>
+                                    <button class="seatFree">32</button>
+                                    <button class="seatFree">33</button>
+                                    <button class="seatFree">34</button>
+                                    <button class="seatFree">35</button>
+                                    <button class="seatFree">36</button>
+                                    <button class="seatFree">37</button>
+                                    <button class="seatFree">38</button>
+                                </div>
+    
+                                <div class="separator"></div>
+    
+                            <!-- Row D -->
+                                <div class="planeR4">
+                                    <div class="labelLetter">D</div>
+                                    <button class="seatFree">1</button>
+                                    <button class="seatFree">2</button>
+                                    <button class="seatFree">3</button>
+                                    <button class="seatFree">4</button>
+                                    <button class="seatFree">5</button>
+                                    <button class="seatFree">6</button>
+                                    <button class="seatFree">7</button>
+                                    <button class="seatFree">8</button>
+                                    <button class="seatFree">9</button>
+                                    <button class="seatFree">10</button>
+                                    <button class="seatFree">11</button>
+                                    <button class="seatFree">12</button>
+                                    <button class="seatFree">13</button>
+                                    <button class="seatFree">14</button>
+                                    <button class="seatFree">15</button>
+                                    <button class="seatFree">16</button>
+                                    <button class="seatFree">17</button>
+                                    <button class="seatFree">18</button>
+                                    <button class="seatFree">19</button>
+                                    <button class="seatFree">20</button>
+                                    <button class="seatFree">21</button>
+                                    <button class="seatFree">22</button>
+                                    <button class="seatFree">23</button>
+                                    <button class="seatFree">24</button>
+                                    <button class="seatFree">25</button>
+                                    <button class="seatFree">26</button>
+                                    <button class="seatFree">27</button>
+                                    <button class="seatFree">28</button>
+                                    <button class="seatFree">29</button>
+                                    <button class="seatFree">30</button>
+                                    <button class="seatFree">31</button>
+                                    <button class="seatFree">32</button>
+                                    <button class="seatFree">33</button>
+                                    <button class="seatFree">34</button>
+                                    <button class="seatFree">35</button>
+                                    <button class="seatFree">36</button>
+                                    <button class="seatFree">37</button>
+                                    <button class="seatFree">38</button>
+                                </div>
+                                <!-- Row E -->
+                                <div class="planeR5">
+                                    <div class="labelLetter">E</div>
+                                    <button class="seatFree">1</button>
+                                    <button class="seatFree">2</button>
+                                    <button class="seatFree">3</button>
+                                    <button class="seatFree">4</button>
+                                    <button class="seatFree">5</button>
+                                    <button class="seatFree">6</button>
+                                    <button class="seatFree">7</button>
+                                    <button class="seatFree">8</button>
+                                    <button class="seatFree">9</button>
+                                    <button class="seatFree">10</button>
+                                    <button class="seatFree">11</button>
+                                    <button class="seatFree">12</button>
+                                    <button class="seatFree">13</button>
+                                    <button class="seatFree">14</button>
+                                    <button class="seatFree">15</button>
+                                    <button class="seatFree">16</button>
+                                    <button class="seatFree">17</button>
+                                    <button class="seatFree">18</button>
+                                    <button class="seatFree">19</button>
+                                    <button class="seatFree">20</button>
+                                    <button class="seatFree">21</button>
+                                    <button class="seatFree">22</button>
+                                    <button class="seatFree">23</button>
+                                    <button class="seatFree">24</button>
+                                    <button class="seatFree">25</button>
+                                    <button class="seatFree">26</button>
+                                    <button class="seatFree">27</button>
+                                    <button class="seatFree">28</button>
+                                    <button class="seatFree">29</button>
+                                    <button class="seatFree">30</button>
+                                    <button class="seatFree">31</button>
+                                    <button class="seatFree">32</button>
+                                    <button class="seatFree">33</button>
+                                    <button class="seatFree">34</button>
+                                    <button class="seatFree">35</button>
+                                    <button class="seatFree">36</button>
+                                    <button class="seatFree">37</button>
+                                    <button class="seatFree">38</button>
+                                </div>
+                                <!-- Row F -->
+                                <div class="planeR6">
+                                    <div class="labelLetter">F</div>
+                                    <button class="seatFree">1</button>
+                                    <button class="seatFree">2</button>
+                                    <button class="seatFree">3</button>
+                                    <button class="seatFree">4</button>
+                                    <button class="seatFree">5</button>
+                                    <button class="seatFree">6</button>
+                                    <button class="seatFree">7</button>
+                                    <button class="seatFree">8</button>
+                                    <button class="seatFree">9</button>
+                                    <button class="seatFree">10</button>
+                                    <button class="seatFree">11</button>
+                                    <button class="seatFree">12</button>
+                                    <button class="seatFree">13</button>
+                                    <button class="seatFree">14</button>
+                                    <button class="seatFree">15</button>
+                                    <button class="seatFree">16</button>
+                                    <button class="seatFree">17</button>
+                                    <button class="seatFree">18</button>
+                                    <button class="seatFree">19</button>
+                                    <button class="seatFree">20</button>
+                                    <button class="seatFree">21</button>
+                                    <button class="seatFree">22</button>
+                                    <button class="seatFree">23</button>
+                                    <button class="seatFree">24</button>
+                                    <button class="seatFree">25</button>
+                                    <button class="seatFree">26</button>
+                                    <button class="seatFree">27</button>
+                                    <button class="seatFree">28</button>
+                                    <button class="seatFree">29</button>
+                                    <button class="seatFree">30</button>
+                                    <button class="seatFree">31</button>
+                                    <button class="seatFree">32</button>
+                                    <button class="seatFree">33</button>
+                                    <button class="seatFree">34</button>
+                                    <button class="seatFree">35</button>
+                                    <button class="seatFree">36</button>
+                                    <button class="seatFree">37</button>
+                                    <button class="seatFree">38</button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
 
                 </div>
             </div>
