--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -151,6 +151,114 @@ body{
                 display: flex;
                 flex-direction: row;
             }
+
+            .seatsReservation{
+                padding: 5px 5px 5px 5px;
+                overflow: auto;
+            }
+
+            .plane{
+                margin: 5px 0px 5px 0px;
+                font-size: auto;
+                display: flex;
+                flex-direction: column;
+                width: fit-content;
+                height: fit-content;
+                background-color: #b9b2a8;
+                border-radius: 75px 25px 25px 75px;
+            }
+
+            .seats{
+                width: fit-content;
+                height: fit-content;
+                padding: 5px 20px 5px 60px;
+            }
+
+            .labelLetter{
+                font-size: 16px;
+                text-align: left;
+                height: 25px;
+                width: 20px;
+                padding: 0px 0px 0px 0px;
+            }
+
+            .planeR1{
+                display: flex;
+                flex-direction: row;
+                height: 25px;
+                padding: 2px 0px 0px 0px;
+            }
+
+            .planeR2{
+                display: flex;
+                flex-direction: row;
+                height: 25px;
+                padding: 0px 0px 0px 0px;
+            }
+
+            .planeR3{
+                display: flex;
+                flex-direction: row;
+                height: 25px;
+                padding: 0px 0px 0px 0px;
+            }
+
+            .separator{
+                height: 25px;
+                padding: 0px 0px 0px 0px;
+            }
+
+            .planeR4{
+                display: flex;
+                flex-direction: row;
+                display: flex;
+                flex-direction: row;
+                height: 25px;
+                padding: 0px 0px 0px 0px;
+            }
+
+            .planeR5{
+                display: flex;
+                flex-direction: row;
+                height: 25px;
+                padding: 0px 0px 0px 0px;
+            }
+
+            .planeR6{
+                display: flex;
+                flex-direction: row;
+                height: 25px;
+                padding: 0px 0px 0px 0px;
+            }
+
+            .seatFree{
+                all:unset;
+                width: 18px;
+                height: 18px;
+                font-size: 14px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                border-radius: 2px 2px 2px 2px;
+                margin: 2.5px 0px 0px 4px;
+                border: 0.5px solid black;
+                background-color: #2afe0077;
+            }
+
+            .seatTaken{
+                all:unset;
+                font-size: 16px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 18px;
+                height: 18px;
+                cursor: pointer;
+                border-radius: 2px 2px 2px 2px;
+                margin: 2.5px 0px 0px 4px;
+                background-color: #fe0000;
+            }
         
     }
 
