fix html - add some ngif

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         <div id="topMenu" class="topMenu">
             <div id="home" class="topMenuItem"><a class="topMenuItem" routerLink="content" routerLinkActive="topMenuItem_active">Home</a></div>
             <div id="home" class="topMenuItem"><a class="topMenuItem" routerLink="search-results" routerLinkActive="topMenuItem_active">Flights</a></div>
-            <div id="weather" class="topMenuItem"><a class="topMenuItem" routerLink="weather" routerLinkActive="topMenuItem_active">Weather</a></div>
+            <!-- <div id="weather" class="topMenuItem"><a class="topMenuItem" routerLink="weather" routerLinkActive="topMenuItem_active">Weather</a></div> -->
             <!-- <div id="contactUs" class="topMenuItem"><a class="topMenuItem" routerLink="" routerLinkActive="topMenuItem_active">Contact Us</a></div> -->
             <div id="myAccount" class="topMenuItem"><a class="topMenuItem" routerLink="account" routerLinkActive="topMenuItem_active">My Account</a></div>
         </div>
