--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -151,6 +151,7 @@ body{
                 padding: 5px 5px 5px 5px;
                 display: flex;
                 flex-direction: column;
+                transition: 0.5s;
             }
 
             .seatsReservation{
