--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -160,7 +160,7 @@ body{
 
             .plane{
                 margin: 5px 0px 5px 0px;
-                font-size: auto;
+                font-size: 16px;
                 display: flex;
                 flex-direction: column;
                 width: fit-content;
