fix transition in styles

--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -61,6 +61,7 @@ body{
                 display: flex;
                 flex-direction: column;
                 background-color: #f4e2e2;
+                transition: 0.5s;
                 opacity: 0.8;
                 font-family: $font-family_2;
                 font-size: 18px;
