--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -55,6 +55,7 @@ body{
             display: flex;
             flex-direction: row;
             background-color: #f4e2e2;
+            transition: 0.5s;
             opacity: 0.8;
             font-family: $font-family_2;
             font-size: 18px;
