--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,13 +18,11 @@ body{
     height: max-content;
     background: linear-gradient(to bottom, transparent, rgb(255, 255, 255) 100%),
     url(../assets/background1.jpg);
-    // background-image: url(../assets/background1.jpg);
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    // background-size: contain;
     // background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 10%, rgba(255, 255, 255, .1) 40%, rgba(255, 255, 255, .5) 75%, rgba(255, 255, 255, 1) 100%) repeat scroll 0 0;
     // position: relative;
-    // background-attachment: fixed;
 }
 
 
